<resources>
    <string name="app_name">NewsApp-MVVM-Architecture</string>

    <string name="top_headline_pagination_title">Pagination Top Headlines</string>
    <string name="top_headline_title">Top Headlines</string>
    <string name="news_sources_title">News Sources</string>
    <string name="country_selection_title">Countries</string>
    <string name="language_selection_title">Languages</string>
    <string name="search_title">Search</string>
    <string name="news_sources">News Sources</string>
    <string name="countries">Countries</string>
    <string name="language">Language</string>
    <string name="search_news">Search News</string>
    <string name="error_description">Something went wrong, Lets try\none more time</string>
    <string name="try_again">try again</string>
    <string name="error_title">Ooops,</string>
    <string name="language_info">Please select any two language\nPress long to select language.</string>
    <string name="data_not_found">Data Not found.</string>

</resources>